# learn-semantic-kernel

./: .env.template  .gitignore  Makefile  README.md  ReleaseProcessChatbot.py  main.py  orchestrator.py  pyproject.toml  releaseProcessPlugin.py
.devcontainer/: devcontainer.json
ai-workflow-sk/: ReleaseProcessChatbot.py  releaseProcessPlugin.py
ai-workflow-sk-agent/: ReleaseProcessChatbot.py  main.py  releaseProcessPlugin.py
llm-workflow-orchestrator/: releaseProcessAgent.py  releaseProcessChatbot.py  ui.py
llm-workflow-orchestrator/plugins/: __init__.py  commonPlugin.py  iRamPlugin.py  searchPlugin.py
workflows/: release-workflow.txt
